feat: add file manager delete functionality
